--- a/cpp/core/internal/BUILD
+++ b/cpp/core/internal/BUILD
@@ -100,7 +100,6 @@ cc_library(
         "//absl/strings",
         "//absl/time",
         "//absl/types:span",
-        "//third_party/nearby/cpp/analytics",
         "//core:core_types",
         "//core/internal/mediums",
         "//core/internal/mediums:utils",
@@ -113,6 +112,7 @@ cc_library(
         "//platform/public:comm",
         "//platform/public:logging",
         "//platform/public:types",
+        "//analytics",
         "//proto:connections_enums_portable_proto",
         "//proto/connections:offline_wire_formats_portable_proto",
         "//securegcm:ukey2",
@@ -197,7 +197,6 @@ cc_test(
         "//absl/synchronization",
         "//absl/time",
         "//absl/types:span",
-        "//third_party/nearby/cpp/analytics",
         "//core:core_types",
         "//core/internal/mediums",
         "//core/internal/mediums:utils",
@@ -207,6 +206,7 @@ cc_test(
         "//platform/public:comm",
         "//platform/public:logging",
         "//platform/public:types",
+        "//analytics",
         "//proto:connections_enums_portable_proto",
         "//proto/connections:offline_wire_formats_portable_proto",
         "//securegcm:ukey2",
