--- a/cpp/core/BUILD
+++ b/cpp/core/BUILD
@@ -59,9 +59,9 @@ cc_library(
     compatible_with = ["//buildenv/target:non_prod"],
     copts = ["-DCORE_ADAPTER_DLL"],
     visibility = [
-        "//third_party/nearby/cpp/analytics:__subpackages__",
         "//core:__subpackages__",
         "//platform/impl/ios:__subpackages__",
+        "//analytics:__subpackages__",
     ],
     deps = [
         "//absl/strings",
@@ -80,7 +80,7 @@ cc_library(
     ],
     compatible_with = ["//buildenv/target:non_prod"],
     visibility = [
-        "//third_party/nearby/cpp/analytics:__subpackages__",
+        "//analytics:__subpackages__",
     ],
     deps = [
         "//proto/analytics:connections_log_cc_proto",
