--- a/proto/analytics/BUILD
+++ b/proto/analytics/BUILD
@@ -36,8 +36,8 @@ cc_proto_library(
     name = "connections_log_cc_proto",
     compatible_with = ["//buildenv/target:non_prod"],
     visibility = [
-        "//third_party/nearby/cpp/analytics:__subpackages__",
         "//core:__subpackages__",
+        "//analytics:__subpackages__",
     ],
     deps = [":connections_log_proto"],
 )
