Update iOS InputFile.
PiperOrigin-RevId: 416864503

--- a/cpp/platform/impl/ios/BUILD
+++ b/cpp/platform/impl/ios/BUILD
@@ -27,6 +27,7 @@ objc_library(
         "Source/Internal/GNCPayload.m",
         "Source/Internal/GNCPayloadListener.mm",
         "Source/Internal/GNCUtils.mm",
+        "Source/Internal/platform.mm",
     ],
     hdrs = [
         "Source/GNCAdvertiser.h",
