Exposes GNCPayload constructor that allows passing an optional payload ID and updates payload send function to not override payload ID with a new random ID
PiperOrigin-RevId: 422568110

--- a/cpp/platform/impl/ios/BUILD
+++ b/cpp/platform/impl/ios/BUILD
@@ -24,7 +24,7 @@ objc_library(
         "Source/Internal/GNCCore.mm",
         "Source/Internal/GNCCoreConnection.mm",
         "Source/Internal/GNCDiscoverer.mm",
-        "Source/Internal/GNCPayload.m",
+        "Source/Internal/GNCPayload.mm",
         "Source/Internal/GNCPayloadListener.mm",
         "Source/Internal/GNCUtils.mm",
         "Source/Internal/platform.mm",
